--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -3,9 +3,9 @@
 # Ruby, Java, .NET, PHP, and Python applications with deep visibility and low overhead.
 # For more information, visit www.newrelic.com.
 #
-# Generated June 03, 2013
+# Generated February 11, 2014
 #
-# This configuration file is custom generated for Barsoom
+# This configuration file is custom generated for SettleUp
 
 
 # Here are the settings that are common to all environments
@@ -15,7 +15,7 @@ common: &default_settings
   # You must specify the license key associated with your New Relic
   # account.  This key binds your Agent's data to your account in the
   # New Relic service.
-  license_key: '<%= ENV[cfef55a4f557cab5b5cfbd3701c187249c0af9d5] %>'
+  license_key: 'cfef55a4f557cab5b5cfbd3701c187249c0af9d5'
 
   # Agent Enabled (Ruby/Rails Only)
   # Use this setting to force the agent to run or not run.
@@ -42,7 +42,7 @@ common: &default_settings
   #       - Ajax Service
   #       - All Services
   #
-  app_name: <%= ENV[SettleUp] %>
+  app_name: My Application
 
   # When "true", the agent collects performance data about your
   # application and reports this data to the New Relic service at
@@ -224,4 +224,4 @@ production:
 staging:
   <<: *default_settings
   monitor_mode: true
-  app_name: <%= ENV["NEW_RELIC_APP_NAME"] %> (Staging)
+  # app_name: My Application (Staging)
